ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/Integration_Logger_Event__e.object-meta.xml
<CustomObject>
    <label>Integration Logger Event</label>
    <pluralLabel>Integration Logger Events</pluralLabel>
</CustomObject>