ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time__c</fullName>
    <label>Elapsed Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>