ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/EncryptedRequest__c.field-meta.xml
<CustomField>
    <fullName>EncryptedRequest__c</fullName>
    <description>A field to capture encrypted request</description>
    <label>Encrypted Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>