ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/EncryptedResponse__c.field-meta.xml
<CustomField>
    <fullName>EncryptedResponse__c</fullName>
    <description>Field to capture encrypted response</description>
    <label>Encrypted Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>