ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/ProCredit_Deal__c.field-meta.xml
<CustomField>
    <fullName>ProCredit_Deal__c</fullName>
    <label>ProCredit Deal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>