ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>A field to capture request</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>