ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/Request_Ext__c.field-meta.xml
<CustomField>
    <fullName>Request_Ext__c</fullName>
    <description>Request extension</description>
    <label>Request Ext</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>