ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>A field to capture Encrypted Response</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>