ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/Response_Ext__c.field-meta.xml
<CustomField>
    <fullName>Response_Ext__c</fullName>
    <description>Response extension</description>
    <label>Response Ext</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>