ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Field to capture service name</description>
    <label>Service Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>