ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status flag depicts API Success or Failure.</description>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>