ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Logger_Event__e/fields/uidRefId__c.field-meta.xml
<CustomField>
    <fullName>uidRefId__c</fullName>
    <label>uidRefId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>